--- a/Intervar/templates/base.html
+++ b/Intervar/templates/base.html
@@ -25,7 +25,9 @@
             <li><a href="/">Home</a></li>
             {% if current_user.is_authenticated %}
               <li><a href="/secret">Super Secret</a></li>
-              <li><a href="/logout">Logout</a></li>
+			  <li><a href="/testinput">Input</a></li>
+			  <li><a href="/showdb">DB dump</a></li>
+			  <li><a href="/logout">Logout</a></li>
             {% else %}
               <li><a href="/login">Login</a></li>
               <li><a href="/register">Register</a></li>
