--- a/Intervar/templates/base.html
+++ b/Intervar/templates/base.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
   <head>
+	
     <title></title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <style>
     body {
       padding-top: 65px;
@@ -10,9 +11,6 @@
     </style>
   </head>
   <body>
-  
-
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -41,6 +39,9 @@
       </div>
     </nav>
     {% block content %}{% endblock %}
-
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="/static/js/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="/static/js/bootstrap.min.js"></script>
   </body>
 </html>
