--- a/Intervar/templates/showdb.html
+++ b/Intervar/templates/showdb.html
@@ -1,13 +1,66 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-    <h1>Database dump</h1>
-	
-</div>
-<div class="row">
-<div class="col-sm-8">
-{{ table }}
-</div>
+	<div class="row">
+	<div class="col-md-10 col-xs-offset-1 col-md-offset-1">        
+    	<h1>Database dump</h1>
+    	<hr>
+	</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-5">
+			<dl class="dl-horizontal">
+				<dt>Patient ID</dt>
+				<dd>356_14</dd>
+				<dt>Family ID</dt>
+				<dd>100</dd>
+				<dt>Panel</dt>
+				<dd>Filtex</dd>
+				<dt>Sex</dt>
+				<dd>Female</dd>
+				<dt>Clinical info</dt>
+				<dd>This should be able to contain potentially a lot of text, because clinical info might be a big field.</dd>
+			</dl>
 
+  		</div>
+
+  		<div class="col-sm-1">
+  		</div>
+		
+		<div class="col-sm-6">
+			<table class="table">
+                        <thead>
+                            <tr>
+                                <th style="padding-top: 4px;">Mean Target <br>Coverage</th>
+                                <th style="padding-top: 4px; width=50%;">% bases > 20 X</th>
+                                <th style="padding-top: 4px;" class="tooltip-table-header" >% bases > 30 X</th>
+                                <th style="padding-top: 4px;" class="tooltip-table-header" >Mean insert size</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>100</td>
+                                <td>27.9 %</td>
+                                <td>29 %</td>
+                                <td>150</td>
+                            </tr>
+                        </tbody>
+                    </table>
+  			</div>
+
+  		</div>
+  		<div class="row"><hr></div>
+  	<div class="row">
+  	<div class="col-sm-1"></div>
+  		<div class="col-sm-8">
+  			<h3>Table of interpreted variants</h3>
+  			{{ var_table }}
+  		</div>
+  	</div>
+  	<div class="row">
+  		<div class="col-sm-4"></div>
+  			<a class="btn btn-success hidden-xs" id="export_to_csv">Export table to CSV</a>
+  	</div>
   </div>
+
 {% endblock %}
