--- a/Intervar/templates/base.html
+++ b/Intervar/templates/base.html
@@ -29,6 +29,7 @@
               <li><a href="/secret">Super Secret</a></li>
 			  <li><a href="/testinput">Input</a></li>
 			  <li><a href="/showdb">DB dump</a></li>
+			  <li><a href="/overview">Overview</a></li>
 			  <li><a href="/logout">Logout</a></li>
             {% else %}
               <li><a href="/login">Login</a></li>
