--- a/Intervar/templates/base.html
+++ b/Intervar/templates/base.html
@@ -26,11 +26,11 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             {% if current_user.is_authenticated %}
-              <li><a href="/secret">Super Secret</a></li>
-			  <li><a href="/testinput">Input</a></li>
-			  <li><a href="/showdb">DB dump</a></li>
-			  <li><a href="/overview">Overview</a></li>
-			  <li><a href="/logout">Logout</a></li>
+			        <li><a href="/overview">Overview</a></li>
+              <li><a href="/testinput">Input</a></li>
+              <li><a href="/interpret">Interpret</a></li>
+			        <li><a href="/showdb">DB dump</a></li>
+              <li><a href="/logout">Logout</a></li>
             {% else %}
               <li><a href="/login">Login</a></li>
               <li><a href="/register">Register</a></li>
