--- a/Intervar/templates/interpret.html
+++ b/Intervar/templates/interpret.html
@@ -4,15 +4,12 @@
    <h1 id="home-title">InterVar Interpretor (Beta) | A Busk production</h1>
 <div class="row">
 <div id="home-searchbox">
-  <form action="/awesome">
+<!--Insert flask style form??-->
+  <form action="/interpret" method="post">
     <input type="submit" style="display: none;"/>
-    <input id="home-searchbox-input" name="query" class="form-control input-lg awesomebar" type="text" placeholder="Search for sample"/>
+    <input id="home-searchbox-input" name="search" class="form-control input-lg awesomebar" type="text" placeholder="Search for sample"/>
     <input type="submit" style="position: absolute; left: -9999px"/>
   </form>
-
-
-
-
 
 <p class="text-muted">
                         Examples - Patient: <a href="/awesome?query=PCSK9">231_15</a>
