started building http GET-request against Alamut

--- a/Intervar/templates/interpret.html
+++ b/Intervar/templates/interpret.html
@@ -32,6 +32,12 @@
   <h3 align="center">Recent News</h3>
   <h4>January 13, 2016</h4> - Version 0.01 InterVar data and browser (beta) is released! 
   
+  
+  <!-- Get '/get' -->
+  <h4>5) Get variant annotations</h4>
+<p>
+<a href="http://localhost:10000/show?request=MLH1:c.464T>G&synchronous=true" target="-blank">http://localhost:10000/show?request=MLH1:c.464T>G&synchronous=true</a> (from a web browser)<br />
+</p>
 </div>
 </div>
 </div>
