--- a/Intervar/templates/base.html
+++ b/Intervar/templates/base.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    
+    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+    var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+    </script>
 <html>
   <head>
-	
     <title></title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <style>
@@ -40,9 +47,11 @@
       </div>
     </nav>
     {% block content %}{% endblock %}
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="/static/js/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/static/js/bootstrap.min.js"></script>
+	  
+  
+  
+
+
+
   </body>
 </html>
