--- a/Intervar/templates/interpret.html
+++ b/Intervar/templates/interpret.html
@@ -38,6 +38,42 @@
 <p>
 <a href="http://localhost:10000/show?request=MLH1:c.464T>G&synchronous=true" target="-blank">http://localhost:10000/show?request=MLH1:c.464T>G&synchronous=true</a> (from a web browser)<br />
 </p>
+
+
+<hr>
+<script type="text/javascript">
+  $(function() {
+    var submit_form = function(e) {
+      $.getJSON($SCRIPT_ROOT + '/_add_numbers', {
+        a: $('input[name="a"]').val(),
+        b: $('input[name="b"]').val()
+      }, function(data) {
+        $('#result').text(data.result);
+        $('input[name=a]').focus().select();
+      });
+      return false;
+    };
+
+    $('a#calculate').bind('click', submit_form);
+
+    $('input[type=text]').bind('keydown', function(e) {
+      if (e.keyCode == 13) {
+        submit_form(e);
+      }
+    });
+
+    $('input[name=a]').focus();
+  });
+</script>
+<h1>jQuery Example</h1>
+<p>
+  <input type="text" size="5" name="a"> +
+  <input type="text" size="5" name="b"> =
+  <span id="result">?</span>
+<p><a href=# id="calculate">calculate server side</a>
+
+<hr>
+
 </div>
 </div>
 </div>
