--- a/Intervar/templates/showdb.html
+++ b/Intervar/templates/showdb.html
@@ -3,8 +3,10 @@
 <div class="container">
 	<div class="row">
 	<div class="col-md-10 col-xs-offset-1 col-md-offset-1">        
-    	<h1>Database dump</h1>
+    	<h1>Interpretation window for: {{ pID }}</h1>
     	<hr>
+       <div>test---------</div>>
+      <hr>
 	</div>
 	</div>
 	<div class="row">
@@ -100,6 +102,12 @@
                     </div>
                   </fieldset>
       		</div>
+
+
+
+
+
+
       		<div class="modal-footer">
         	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         	<button type="button" class="btn btn-primary">Submit to DB</button>
