--- a/Intervar/templates/interpret.html
+++ b/Intervar/templates/interpret.html
@@ -71,6 +71,21 @@
       }
     });
 
+	
+	$("a#jqtest_2").click(function(){
+    $.getJSON("http://localhost:10000/show?request=MLH1:c.464T>G&synchronous=true", function(result){
+        $.each(result, function(i, field){
+            $("#result").append(field + " ");
+			});
+		});
+		alert(results)
+	}); 
+	
+	
+	
+	
+	
+	
     $('input[name=a]').focus();
   });
 </script>
@@ -86,7 +101,9 @@
 <p><a href=# id="calculate">calculate server side</a>
 </br>
 <a href=# id="jqtest">test</a>
-
+</br>
+<a href=# id="jqtest_2">test JSON</a>
+<span id="json_result">?</span>
 <hr>
 
 </div>
