--- a/Intervar/templates/interpret.html
+++ b/Intervar/templates/interpret.html
@@ -5,12 +5,12 @@
 <div class="row">
 <div id="home-searchbox">
 <!--Insert flask style form??-->
-  <form action="/interpret" method="post">
-    <input type="submit" style="display: none;"/>
-    <input id="home-searchbox-input" name="search" class="form-control input-lg awesomebar" type="text" placeholder="Search for sample"/>
-    <input type="submit" style="position: absolute; left: -9999px"/>
-  </form>
-
+    
+    <form action="/interpret" method=POST>
+      <input type="submit" style="display: none;"/>
+      {{ form.search(class="form-control input-lg awesomebar", type="text", placeholder="Search for sample") }}
+      <input type="submit" style="position: absolute; left: -9999px"/>
+    </form>
 <p class="text-muted">
                         Examples - Patient: <a href="/awesome?query=PCSK9">231_15</a>
                         
