--- a/Intervar/templates/showdb.html
+++ b/Intervar/templates/showdb.html
@@ -4,8 +4,8 @@
 	<div class="row">
 	<div class="col-md-10 col-xs-offset-1 col-md-offset-1">        
     	<h1>Interpretation window for: {{ pID }}</h1>
-    	<hr>
-       <div>test---------</div>>
+
+       
       <hr>
 	</div>
 	</div>
@@ -13,23 +13,23 @@
 		<div class="col-sm-5">
 			<dl class="dl-horizontal">
 				<dt>Patient ID</dt>
-				<dd>356_14</dd>
+        
+				<dd>{{ pID_patient.PID }}</dd>
 				<dt>Family ID</dt>
-				<dd>100</dd>
+				<dd>{{ pID_patient.familyID }}</dd>
 				<dt>Panel</dt>
-				<dd>Filtex</dd>
+				<dd>{{ pID_patient.panel_name }}</dd>
 				<dt>Sex</dt>
-				<dd>Female</dd>
+				<dd>{{ pID_patient.sex }}</dd>
 				<dt>Clinical info</dt>
-				<dd>This should be able to contain potentially a lot of text, because clinical info might be a big field.</dd>
+				<dd>{{ pID_patient.clinInfo }}</dd>
 			</dl>
 
   		</div>
 
-  		<div class="col-sm-1">
-  		</div>
+  		
 		
-		<div class="col-sm-6">
+		<div class="col-sm-7">
 			<table class="table">
                         <thead>
                             <tr>
@@ -37,14 +37,16 @@
                                 <th style="padding-top: 4px; width=50%;">% bases > 20 X</th>
                                 <th style="padding-top: 4px;" class="tooltip-table-header" >% bases > 30 X</th>
                                 <th style="padding-top: 4px;" class="tooltip-table-header" >Mean insert size</th>
+                                <th style="padding-top: 4px;" class="tooltip-table-header" >Median insert size</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>100</td>
-                                <td>27.9 %</td>
-                                <td>29 %</td>
-                                <td>150</td>
+                                <td>{{ pID_patient.mean_target_cov }}</td>
+                                <td>{{ pID_patient.pct_target_20 }}</td>
+                                <td>{{ pID_patient.pct_target_30 }}</td>
+                                <td>{{ pID_patient.mean_is }}</td>
+                                <td>{{ pID_patient.median_is }}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -78,7 +80,7 @@
         	<p>Fill inn variant identification and get data from Alamut</p>
         		<fieldset class="form-group">
     			{{ form.chrom.label }}
-    			{{ form.chrom(class="form-control") }}
+          {{ form.chrom(class="form-control") }}
 				</fieldset>
 				<fieldset class="form-group">
     			{{ form.start.label }}
