--- a/Intervar/templates/testinput.html
+++ b/Intervar/templates/testinput.html
@@ -4,6 +4,7 @@
     <div class="col-sm-5">
     <h1>Patient info</h1>
 	<form action="{{ url_for('testinput') }}" method=POST enctype="multipart/form-data">
+    {{ form.hidden_tag() }}
     <fieldset class="form-group">
     {{ form.patient_ID.label }}
     {{ form.patient_ID(class="form-control", placeholder="Patient ID") }}
