--- a/Intervar/templates/interpret.html
+++ b/Intervar/templates/interpret.html
@@ -33,34 +33,70 @@
   <hr>
   <script type="text/javascript">
   $(function() {	   
-	  // test of sending a variable to Flask:
+	// test of sending a variable to Flask:
     // Try replacing the a and b with the output from the request against Alamut
     $("a#vstest").click(function(){
-      $.getJSON($SCRIPT_ROOT + '/interpret', {
-          a: "Does this work?",
-          b: "or this?"});
-    });
+	$.ajax({
+	type: "POST",
+	contentType: "application/json; charset=utf-8",
+	url: "/interpret",
+	data: JSON.stringify({title: 'hallo', article: 'test'}),
+	success: function (data) {
+	alert(data.title + data.article)
+	},
+	dataType: "json"
+	});
+	});
 
-
+	$("a#vstestddd2").click(function(){
+	$.ajax({
+	type: "POST",
+	contentType: "application/json; charset=utf-8",
+	url: "/interpret",
+	data: JSON.stringify({title: 'hallo', article: 'test'}),
+	success: function (data) {
+	alert(data.title + data.article)
+	},
+	dataType: "json"
+	});
+	});
+	
+	
+	$("a#vstest2").click(function(){
+    $.getJSON("http://localhost:10000/show?request=MLH1:c.464T>G&synchronous=true", function(result){
+	$.ajax({
+	type: "POST",
+	contentType: "application/json; charset=utf-8",
+	url: "/interpret",
+	data: JSON.stringify(result),
+	success: function (data) {
+	alert(data.title + data.article)
+	},
+	dataType: "json"
+	});
+		
+		
+		});
+	});
+	
+	
+	
 
     $("a#jqtest_2").click(function(){
     $.getJSON("http://localhost:10000/show?request=MLH1:c.464T>G&synchronous=true", function(result){
-      $.each(result, function(key, val){
-        $("#json_result").append(key + ":" + val + "</br>"); // set value on form objects here? $("#search").val(val);  <-- Like so?? Or send the entire contents via another Get
-			});
+		$.getJSON($SCRIPT_ROOT + '/interpret', {a: result});	
 		});
-		alert(results)
 	}); 
-    $('input[name=a]').focus();
+    
   
   });
 </script>
-
 <h1>jQuery Example</h1>
 
 </br>
 <a href=# id="jqtest_2">test JSON</a></br>
-<a href=# id="vstest">test send variable</a>
+<a href=# id="vstest">test send variable</a></br>
+<a href=# id="vstest2">test send variable from Alamut</a>
 </br>
 <span id="json_result">?</span>
 <hr>
