--- a/Intervar/templates/showdb.html
+++ b/Intervar/templates/showdb.html
@@ -27,6 +27,54 @@ $('#test tr').click(function () {
     var alt = $(this).closest("tr").find('td:eq(4)').text();
     alert(chrom + "|" + start + "|" + stop + "|" + ref + "|" + alt);
 });
+
+ //Check if a ref & alt is letter as opposed to -. And also check if length == 1. This would mean missense.
+function isOneLetter(str) {
+  return str.length === 1 && str.match(/[a-z]/i);
+}
+function isLetter(str) {
+  return str.match(/[a-z]/i);
+}
+
+// Check if variant is:
+// missense
+// del
+// insertion
+// duplication
+
+$('#get_alamut').click(function () {
+    var chrom = $('#chrom').val()
+    var start = $('#start').val()
+    var stop = $('#stop').val()
+    var ref = $('#ref').val()
+    var alt = $('#alt').val()
+    var assembly = "(GRCh37)"
+    var alamut_request = ""
+    
+    // Get input 
+    if (isOneLetter(ref) && isOneLetter(alt)) {
+    var alamut_request = "chr" + chrom  +assembly + ":g." + start + ref + ">" + alt
+    } else if (isLetter(ref) && isLetter(alt) !== true) {
+    var alamut_request = "chr" + chrom + assembly + ":g." + start + "_" + stop + "del"
+    } else if ( isLetter(ref) !== true && isLetter(alt)) {
+    var alamut_request = "chr" + chrom + assembly + ":g." + start + "_" + stop + "ins" + alt
+    }
+    
+    //#deletion   
+    //localhost:10000/show?request=chr1:g.183205708G>C&synchronous=true
+    $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronous=true", function(result){
+	$.ajax({
+	type: "POST",
+	contentType: "application/json; charset=utf-8",
+	url: "/showdb",
+	data: JSON.stringify(result),
+	success: function (data) {
+	alert("ferdig" + chrom +"-"+ start +" "+ stop +" "+ ref +" "+ alt)
+	},
+	dataType: "json"
+	});
+	});       
+});
 });
 </script>
 
@@ -82,7 +130,7 @@ $('#test tr').click(function () {
   		<div class="row"><hr></div>
   	<div class="row">
   	<div class="col-sm-1"></div>
-  		<div class="col-sm-8">
+  		<div class="col-sm-9">
   			<h3>Table of interpreted variants</h3>
   			{{ var_table }}
   		</div>
@@ -127,11 +175,12 @@ $('#test tr').click(function () {
 				</fieldset>
 				<fieldset class="form-group">
                     <div class="col-sm-10">
-                      <button type="submit" class="btn btn-default">Get from Alamut</button>
-					            {{ form.submit(class="btn btn-primary") }}
+					  {{ form.submit(class="btn btn-primary") }}
                     </div>
                 </fieldset>
 				</form>
+                
+                 <button id="get_alamut" type="submit" class="btn btn-default">Get from Alamut</button>
       		</div>
       		<div class="modal-footer">
         	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
