--- a/Intervar/templates/showdb.html
+++ b/Intervar/templates/showdb.html
@@ -20,17 +20,25 @@
   })
 //get from variant table @ click:
 $('#test tr').click(function () {
+  
   var chrom = $(this).closest("tr").find('td:eq(0)').text();
   var start = $(this).closest("tr").find('td:eq(1)').text();
   var stop = $(this).closest("tr").find('td:eq(2)').text();
   var ref = $(this).closest("tr").find('td:eq(3)').text();
   var alt = $(this).closest("tr").find('td:eq(4)').text();
-  $('.variant_info').html(chrom + " " + start + " " + stop);
+  //alamut variables:
+  $.getJSON($SCRIPT_ROOT + '/_return_alamut_for_variant', {
+    id: 1
+  }, function(data) {
+        $('#agene').text(data.gene)
+  });
+  console.log("test")
+  //$('.variant_info').html(chrom + " " + start + " " + stop);
   $('#Interp_Modal').modal('show');
-
-    //alert(chrom + "|" + start + "|" + stop + "|" + ref + "|" + alt);
+  //alert(chr + "|"+ start+ "|"+stop+ "|"+ref+ "|"+alt)
   });
 
+  
  //Check if a ref & alt is letter as opposed to -. And also check if length == 1. This would mean missense.
  function isOneLetter(str) {
   return str.length === 1 && str.match(/[a-z]/i);
@@ -79,12 +87,13 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
 	<div class="row">
    <hr>
    <div class="col-md-10 col-xs-offset-1 col-md-offset-1">        
-     <h1>Interpretation window for: {{ pID }}</h1>       
+     <h1>Interpretation window for: {{ pID }}</h1>
    </div>
  </div>
  <div class="row">
   <div class="col-sm-5">
    <dl class="dl-horizontal">
+   
     <dt>Patient ID</dt>
     <dd>{{ pID_patient.PID }}</dd>
     <dt>Family ID</dt>
@@ -138,11 +147,12 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
 <div class="row"><hr></div>
 <div class="row">
  <div class="col-sm-1"></div>
- <div class="col-sm-9">
+ <div class="col-sm-12">
   <h3>Table of interpreted variants</h3>
   {{ var_table }}
 </div>
 </div>
+<br>
 <div class="row">
   <div class="col-sm-4"></div>
   <!-- Trigger the modal with a button -->
@@ -254,7 +264,47 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
         <p>Fill out with data from alamut_annotation table</p>
         <p>Comment field for the variant and the variant in this sample.</p>
         <p>Add a button for deleting the entry from this patients variant table.</p>
-        <div class="variant_info"></div>
+        
+        <dl class="dl-horizontal">
+        <dt>Gene</dt>
+        <dd id="agene"></dd>
+        <dt>Transcript</dt>
+        <dt>gDNA</dt>
+        <dt>Protein change</dt>
+        <dt>Type of mutation</dt>
+        <dt>Zygosity</dt>
+        <dt>Omim/HGMD</dt>
+        <dt>dbSNP</dt>
+        <dt>1000 genomes</dt>
+        <dt>ESP</dt>
+        <dt>Exac</dt>
+        <dt>in_house_controls</dt>
+        <dt>Zygosity</dt>
+        <dt>Seen @ MGM</dt>
+        <dt>Functional studies</dt>
+        
+        
+        </dl>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p>...<p>
+        <form action="" method=POST enctype="multipart/form-data">
+          {{ pform.hidden_tag() }}
+          <fieldset class="form-group">
+          </fieldset>
+          <fieldset class="form-group">
+          </fieldset>
+          <fieldset class="form-group">
+          </fieldset>
+          <fieldset class="form-group">
+          </fieldset>
+          <fieldset class="form-group">
+           
+            </div>
+          </fieldset>
+        </form>
+        
+        
+        <!-- should contain two text inputs and a class selector along with a ACMGclass button-->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
